--- a/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
@@ -64,3 +64,32 @@ legend {
 	font-size:120%;
 	font-weight:bold;
 }
+
+.problem {
+	color: white;
+	background-color:red;
+}
+
+/* css styles for reserves color alerts */
+.onloan {
+	background-color: #FFED3D;
+}
+
+.reserved {
+	background-color: #8EBAFF;
+}
+
+.transfered {
+	background-color: #F9FF9A;
+}
+
+.inwait {
+	background-color: #33CC99;
+}
+
+.other {
+	background-color: #FF0000;
+}
+
+/* end of css styles for reserves color alerts */
+
