--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryC.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryC.tmpl
@@ -83,7 +83,7 @@
 			<!-- 		input from form3		 -->
 			<input type="hidden" name="dateenrolled" value="<!-- TMPL_VAR NAME="dateenrolled" -->">
 			<input type="hidden" name="dateexpiry"  value="<!-- TMPL_VAR NAME="dateexpiry" -->">
-			<textarea  style="display:none;" name="opacnotes" cols="70" rows="3"><!-- TMPL_VAR NAME="opacnotes"--></textarea>
+			<textarea  style="display:none;" name="opacnote" cols="70" rows="3"><!-- TMPL_VAR NAME="opacnote"--></textarea>
 			<textarea style="display:none;" name="borrowernotes" cols="70" rows="3"><!-- TMPL_VAR NAME="borrowernotes" --></textarea>
 			<input type="hidden" name="login"  value="<!-- TMPL_VAR NAME="login" -->">
 			<input type="hidden" name="password"  value="<!-- TMPL_VAR NAME="password" -->">	
@@ -263,7 +263,7 @@
 <!-- 		input from form3		 -->
 		<input type="hidden" name="dateenrolled" size="20" value="<!-- TMPL_VAR NAME="dateenrolled" -->">
 		<input type="hidden" name="dateexpiry" size="20" value="<!-- TMPL_VAR NAME="dateexpiry" -->">
-		<textarea  style="display:none;" name="opacnotes" cols="70" rows="3"><!-- TMPL_VAR NAME="opacnotes"--></textarea>
+		<textarea  style="display:none;" name="opacnote" cols="70" rows="3"><!-- TMPL_VAR NAME="opacnote"--></textarea>
 		<textarea style="display:none;" name="borrowernotes" cols="70" rows="3"><!-- TMPL_VAR NAME="borrowernotes" --></textarea>
 		<input type="hidden" name="login" size="20"  value="<!-- TMPL_VAR NAME="login" -->">
 		<input type="hidden" name="password" size="20"  value="<!-- TMPL_VAR NAME="password" -->">	
@@ -568,13 +568,13 @@
 							onblur="CheckDate(document.form.dateexpiry.value);check_manip_date('verify');" value="<!-- TMPL_VAR NAME="dateexpiry" -->">
 		</p>
 		<p>
-			<!-- TMPL_IF NAME="mandatoryopacnotes" -->
+			<!-- TMPL_IF NAME="mandatoryopacnote" -->
 				<label style="font-weight:bold">
 			<!--TMPL_ELSE-->
 				<label>
 			<!-- /TMPL_IF-->	
 			OPAC note</label>
-			<textarea  name="opacnotes" cols="70" rows="2"   ><!-- TMPL_VAR NAME="opacnotes" --></textarea>
+			<textarea  name="opacnote" cols="70" rows="2"   ><!-- TMPL_VAR NAME="opacnote" --></textarea>
 		</p>
 		<p>
 			<!-- TMPL_IF NAME="mandatoryborrowernotes" -->	
