--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -19,7 +19,7 @@
 	<a href="/cgi-bin/koha/members/member-flags.pl?member=<!-- TMPL_VAR NAME=bornum -->">
 		Modify Member's Privileges
 	</a> 
-	<a href="/cgi-bin/koha/members/deletemem.pl?borrowernumber=<!-- TMPL_VAR NAME="bornum" -->">
+	<a href="javascript:confirm_deletion()">
 		Delete this Member
 	</a> 
 	<a href="/cgi-bin/koha/members/boraccount.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->">
@@ -230,4 +230,18 @@
 	<!-- /TMPL_IF -->
 	</form>
 </fieldset>
+<script language="JavaScript" type="text/javascript">
+function confirm_deletion() {
+	var is_confirmed = confirm('Do you confirm deletion ?');
+	if (is_confirmed) {
+			window.location="/cgi-bin/koha/members/deletemem.pl?member=<!-- TMPL_VAR NAME="bornum" -->";
+	}
+}
+function confirm_reregistration() {
+	var is_confirmed = confirm('Do you confirm re_registration ?');
+	if (is_confirmed) {
+	window.location="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->&reregistration=y";
+	}
+}
+</script>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
