members.js :translate javascript message moremember.tmpl:change wrong url Members.pm: change wrong field name in sql request(sub newmember) memberentryA.tmpl : change wrong field name memberentry.pl:change test condition (checkuniquemember)

--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
@@ -57,7 +57,7 @@
 	<input type="hidden" name="type" value="borrowers">
 	<input type="hidden" name="step" value="<!-- TMPL_VAR NAME="step" -->">
 	<input type="hidden" name="updtype" value="<!-- TMPL_VAR NAME="updtype" -->">
-	<input type="hidden" name="guarantor"   value="<!-- TMPL_VAR NAME="guarantor" -->">
+	<input type="hidden" name="guarantorid"   value="<!-- TMPL_VAR NAME="guarantorid" -->">
 	<input type="hidden" name="select_roadtype" value="<!-- TMPL_VAR NAME="select_roadtype" -->">
 	<input type="hidden" name="destination" value="<!-- TMPL_VAR NAME="destination" -->" />
 	<input type="hidden" name="check_member" value="<!-- TMPL_VAR NAME="check_member" -->" />
@@ -240,7 +240,7 @@
 	<input type="hidden" name="type" value="borrowers">
 	<input type="hidden" name="step" value="<!-- TMPL_VAR NAME="step" -->">
 	<input type="hidden" name="updtype" value="<!-- TMPL_VAR NAME="updtype" -->">
-	<input type="hidden" name="guarantor"   value="<!-- TMPL_VAR NAME="guarantor" -->">
+	<input type="hidden" name="guarantorid"   value="<!-- TMPL_VAR NAME="guarantorid" -->">
 	<input type="hidden" name="select_roadtype" value="<!-- TMPL_VAR NAME="select_roadtype" -->">
 	<input type="hidden" name="destination" value="<!-- TMPL_VAR NAME="destination" -->" />
 	<input type="hidden" name="check_member" value="<!-- TMPL_VAR NAME="check_member" -->" />
@@ -466,7 +466,7 @@
 	<input type="hidden" name="type" value="borrowers">
 	<input type="hidden" name="step" value="<!-- TMPL_VAR NAME="step" -->">
 	<input type="hidden" name="updtype" value="<!-- TMPL_VAR NAME="updtype" -->">
-	<input type="hidden" name="guarantor"   value="<!-- TMPL_VAR NAME="guarantor" -->">
+	<input type="hidden" name="guarantorid"   value="<!-- TMPL_VAR NAME="guarantorid" -->">
 	<input type="hidden" name="select_roadtype" value="<!-- TMPL_VAR NAME="select_roadtype" -->">
 	<input type="hidden" name="destination" value="<!-- TMPL_VAR NAME="destination" -->" />
 	<input type="hidden" name="check_member" value="<!-- TMPL_VAR NAME="check_member" -->" />
