--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -7,7 +7,7 @@
 
 <ul>
 	<!-- TMPL_UNLESS name="guarantorborrowernumber" -->
-	<a href="/cgi-bin/koha/members/jmemberentry.pl?type=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">Add child</a> 
+	<a href="/cgi-bin/koha/members/memberentry.pl?op=add&guarantorid=<!-- TMPL_VAR NAME="borrowernumber" -->&category_type=C">Add child</a> 
 	<!-- /TMPL_UNLESS -->
 	<a href="/cgi-bin/koha/members/memberentry.pl?borrowernumber=<!-- TMPL_VAR NAME="bornum" -->&category_type=<!-- TMPL_VAR NAME="category_type"-->">
 
