--- a/koha-tmpl/intranet-tmpl/prog/en/circ/returns.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/returns.tmpl
@@ -26,10 +26,23 @@
 				<input type="hidden" name="bn-<!-- TMPL_VAR Name="counter" -->" value="<!-- TMPL_VAR Name="bornum" -->" />
 			<!-- /TMPL_LOOP -->
 			<input type="hidden" name="barcode" value="0" />
-			</form>
-		
-			
+			</form>			
 		<!-- /TMPL_IF -->
+		
+		<!-- TMPL_IF Name="transfer" -->
+			<h2>This item must return to his homebranch :</h2>
+			<p>The document <!-- TMPL_VAR NAME="itemtitle" --> (<!-- TMPL_VAR NAME="itemauthor" -->) Must be returned to his homebranch(<b><!-- TMPL_VAR NAME="itemhomebranch" --></b>)
+				<form method="post" action="returns.pl">
+					<!-- TMPL_LOOP Name="inputloop" -->
+						<input type="hidden" name="ri-<!-- TMPL_VAR NAME="counter" -->" value="<!-- TMPL_VAR NAME="barcode" -->">
+						<input type="hidden" name="dd-<!-- TMPL_VAR NAME="counter" -->" value="<!-- TMPL_VAR NAME="duedate" -->">
+						<input type="hidden" name="bn-<!-- TMPL_VAR NAME="counter" -->" value="<!-- TMPL_VAR NAME="bornum" -->">
+					<!-- /TMPL_LOOP -->
+					<input type="hidden" name="barcode" value="0">
+					<input type="submit" value="OK">
+				</form>
+		<!-- /TMPL_IF -->
+		
 		<!-- TMPL_IF Name="diffbranch" -->
 			<h3>Item Consigned:</h3>
     	
