bug fix : navigation's problem  in differents borrowers forms

--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryP.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryP.tmpl
@@ -640,9 +640,9 @@
 		<p>
 		</fieldset>
 		<div>
-			<input type="button" class="borrowers_button" name="etapeprec2" value="Etape precedente" onclick="check_form_borrowers(1);">	
+			<input type="button" class="borrowers_button" name="step2" value="Previous step" onclick="check_form_borrowers(1);">	
 			<!-- TMPL_IF NAME="opadd" -->
-				<input type="button" name="step" onclick="unique();" value="Add member">
+				<input type="button" name="step4" onclick="unique();" value="Add member">
 			<!-- TMPL_ELSE -->
 				<input type="button" name="step4" onclick="check_form_borrowers();" value="Modify member">
 			<!--/TMPL_IF -->
