add call to doc-head-open.inc and doc-head-close.inc delete direct call to common-style.css

--- a/koha-tmpl/intranet-tmpl/prog/en/members/borrowers_details.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/borrowers_details.tmpl
@@ -1,12 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>BORROWER DETAILS</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/includes/common-style.css">
-</head>
-
-<body onblur="self.focus()">
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Borrower Details<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <div id="mainbloc">
 	<h1>BORROWER DETAILS</h1>
 	
@@ -64,5 +56,4 @@
 	</form>
 
 
-</body>
-</html>
+
