--- a/koha-tmpl/intranet-tmpl/prog/en/members/guarantor_search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/guarantor_search.tmpl
@@ -1,10 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>Guarantor Search</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/includes/common-style.css">
-</head>
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Guarantor search<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <h1>Search guarantor</h1>
 	Search on
 	<form action="/cgi-bin/koha/members/guarantor_search.pl" method="post">
@@ -45,6 +39,5 @@
 </div>
 <!--/TMPL_IF-->
 
-</html>
 
 
