--- a/koha-tmpl/intranet-tmpl/prog/en/admin/branches.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/branches.tmpl
@@ -25,7 +25,7 @@
 	</tr>
 	<tr>
 		<td>Name</td>
-		<td><input type="text" name="branchname" size="40" maxlength="80" value="<!-- TMPL_VAR name="branchname" escape="HTML" -->" />&nbsp;</td>
+		<td><input type="text" name="branchname" size="40" maxlength="80" value="<!-- TMPL_VAR name="branch_name" escape="HTML" -->" />&nbsp;</td>
 	</tr>
 <!-- TMPL_LOOP name="categoryloop" -->
 					<tr>
