Members.pm: modify getborrowercategory function  to return dateofbirthrequired and upperagelimit memberentryC and P  : add error message ERROR_age_limitations memberentry.pl : replace sql request  by function getborrowercategory for return upperagelimit and dateofbirthrequired moremember.pl: modify call to function getborrowercategory

--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryC.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryC.tmpl
@@ -38,6 +38,9 @@
 			<!-- TMPL_IF NAME="ERROR_login_exist" -->
 				<p>login/password already exist</p>
 			<!-- /TMPL_IF -->
+ 			<!-- TMPL_IF NAME="ERROR_age_limitations" -->
+                                Member is too young or too old for this category
+                        <!-- /TMPL_IF -->
 		</div>
 	<!-- /TMPL_IF -->
 
