--- a/koha-tmpl/intranet-tmpl/prog/en/members/readingrec.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/readingrec.tmpl
@@ -46,7 +46,6 @@
 </tr>
 <!-- /TMPL_LOOP -->
 </table>
-
-
+<form action="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR name="bornum" -->" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" value="Return to Patron Record" /></form>
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
