--- a/koha-tmpl/intranet-tmpl/prog/en/members/boraccount.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/boraccount.tmpl
@@ -34,9 +34,9 @@
 </table>
 <!-- The manual invoice and credit buttons -->
 
-<form action="/cgi-bin/koha/maninvoice.pl" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /><input type="submit" value="Create Manual Invoice" /></form>
+<form action="/cgi-bin/koha/members/maninvoice.pl" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /><input type="submit" value="Create Manual Invoice" /></form>
 
-<form action="/cgi-bin/koha/mancredit.pl" method="get"> <input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" value="Create Manual Credit" /></form>
+<form action="/cgi-bin/koha/members/mancredit.pl" method="get"> <input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" value="Create Manual Credit" /></form>
 
 <form action="/cgi-bin/koha/members/moremember.pl" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" value="Return to Patron Record" /></form>
 
