--- a/koha-tmpl/intranet-tmpl/prog/en/members/pay.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/pay.tmpl
@@ -4,7 +4,6 @@
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
 
 <h1>Pay Fines for <!-- TMPL_VAR name="firstname" --> <!-- TMPL_VAR name="surname" --></h1>
-<a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR name="bornum" -->">Back to borrower</a> 
 <form action="/cgi-bin/koha/members/pay.pl" method="post">
 	<input type="hidden" name="bornum" value="<!-- TMPL_VAR name="bornum" -->" />
 
@@ -43,4 +42,5 @@
 </tr>
 </table>
 <input type="submit" name="submit"  value="Make Payment" class="submit" /></form>
+<form action="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR name="bornum" -->" method="get"><input type="hidden" name="bornum" value="<!-- TMPL_VAR NAME="bornum" -->" /> <input type="submit" value="Return to Patron Record" /></form>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
