--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -9,7 +9,7 @@
 	<!-- TMPL_UNLESS name="guarantorborrowernumber" -->
 	<a href="/cgi-bin/koha/members/memberentry.pl?op=add&guarantorid=<!-- TMPL_VAR NAME="borrowernumber" -->&category_type=C">Add child</a> 
 	<!-- /TMPL_UNLESS -->
-	<a href="/cgi-bin/koha/members/memberentry.pl?borrowernumber=<!-- TMPL_VAR NAME="bornum" -->&category_type=<!-- TMPL_VAR NAME="category_type"-->">
+	<a href="/cgi-bin/koha/members/memberentry.pl?op=modify&borrowernumber=<!-- TMPL_VAR NAME="bornum" -->&category_type=<!-- TMPL_VAR NAME="category_type"-->">
 
 		Edit this Record
 	</a> 
