Allowing users to review items if reviewson is set to on in system preferences

--- a/koha-tmpl/opac-tmpl/npl/en/opac-review.tmpl
+++ b/koha-tmpl/opac-tmpl/npl/en/opac-review.tmpl
@@ -12,7 +12,7 @@
          
 <table>                                  
 <tr><td>Review</td></tr>     
-<tr><td><textarea name="review" cols=40 rows=8><!--TMPL_VAR NAME="review"-->></textarea></td></tr>                               
+<tr><td><textarea name="review" cols=40 rows=8><!--TMPL_VAR NAME="review"--></textarea></td></tr>                               
 <tr><td><input type="submit" value="Submit"></td></tr>             
 </table>                 
 </form>
