--- a/koha-tmpl/opac-tmpl/npl/en/opac-detail.tmpl
+++ b/koha-tmpl/opac-tmpl/npl/en/opac-detail.tmpl
@@ -16,6 +16,7 @@
 <li><a class="print" href="/cgi-bin/koha/opac-detailprint.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" onclick="Dopop('opac-detailprint.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">Print</a></li>
 <!-- TMPL_IF name="virtualshelves" --><li><a class="shelf" href="/cgi-bin/koha/opac-addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" onclick="Dopop('opac-addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">Add to My Book List</a></li><!-- /TMPL_IF -->
 <li><a class="cart" href="#" onclick="addRecord('<!-- TMPL_VAR NAME="biblionumber" -->'); return false;">Add to My Book Bag</a></li>
+<!-- TMPL_IF name="reviewson" --><li><a class="shelf" href="/cgi-bin/koha/opac-review.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">Submit a Review</a></li><!-- /TMPL_IF -->
 </ul>
 </div>
 <div class="further">
