--- a/koha-tmpl/intranet-tmpl/prog/en/reviews/reviewswaiting.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reviews/reviewswaiting.tmpl
@@ -15,6 +15,8 @@
 <tr>
 <td><!-- TMPL_VAR NAME="review" -->
 </td>
+<td><a href="/cgi-bin/koha/reviews/reviewswaiting.pl?op=approve&reviewid=<!-- TMPL_VAR NAME="reviewid" -->">Approve</a></td>
+<td><a href="/cgi-bin/koha/reviews/reviewswaiting.pl?op=delete&reviewid=<!-- TMPL_VAR NAME="reviewid" -->">Delete</a></td>
 </tr>
 <!-- /TMPL_LOOP -->
 </table>
