aquisition.pm : bug fix add variable decalaration selectbranchprinter.tmpl :bug fix call to wrong include file

--- a/koha-tmpl/intranet-tmpl/prog/en/circ/selectbranchprinter.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/selectbranchprinter.tmpl
@@ -1,4 +1,4 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Circulation: Select Your Home Branch<!-- TMPL_INCLUDE NAME="doc-head-circ-close.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Circulation: Select Your Home Branch<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
 
