Members.pm ,memberentry(A)(P)(C).tmpl,memberentry.pl:bug fix with wrong field name memberentry.pl:translate  title in english ;=) (i hope is ok) buf fix with bad condition

--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
@@ -73,9 +73,9 @@
 	<input type="hidden" name="zipcode"  value="<!-- TMPL_VAR NAME="zipcode" -->">
 	<input type="hidden" name="city"  value="<!-- TMPL_VAR NAME="city" -->">	
 	<input type="hidden" name="branchcode"  value="<!-- TMPL_VAR NAME="branchcode" -->">
-	<input type="hidden" name="b_address"  value="<!-- TMPL_VAR NAME="b_address" -->">
-	<input type="hidden" name="b_zipcode"  value="<!-- TMPL_VAR NAME="b_zipcode" -->">
-	<input type="hidden" name="b_city"  value="<!-- TMPL_VAR NAME="b_city" -->">	
+	<input type="hidden" name="B_address"  value="<!-- TMPL_VAR NAME="B_address" -->">
+	<input type="hidden" name="B_zipcode"  value="<!-- TMPL_VAR NAME="B_zipcode" -->">
+	<input type="hidden" name="B_city"  value="<!-- TMPL_VAR NAME="B_city" -->">	
 	<input type="hidden" name="phone"   value="<!-- TMPL_VAR NAME="phone" -->" >
 	<input type="hidden" name="phonepro" value="<!-- TMPL_VAR NAME="phonepro" -->" >
 	<input type="hidden" name="mobile"  value="<!-- TMPL_VAR NAME="mobile" -->" >	
@@ -349,31 +349,31 @@
 		<fieldset>
 		<legend>Alt Address</legend>
 			<p>
-				<!-- TMPL_IF NAME="mandatoryb_address" -->
+				<!-- TMPL_IF NAME="mandatoryB_address" -->
 					<label style="font-weight:bold">
 				<!--TMPL_ELSE-->
 					<label>
 				<!-- /TMPL_IF-->
 				Address</label>
-				<input type="text" name="b_address" size="40" value="<!-- TMPL_VAR NAME="b_address" -->">
+				<input type="text" name="B_address" size="40" value="<!-- TMPL_VAR NAME="B_address" -->">
 			</p>
 			<p>
-				<!-- TMPL_IF NAME="mandatoryb_zipcode" -->
+				<!-- TMPL_IF NAME="mandatoryB_zipcode" -->
 					<label style="font-weight:bold">
 				<!--TMPL_ELSE-->
 					<label>
 				<!-- /TMPL_IF-->
 				Zipcode</label>
-				<input type="text" name="b_zipcode" maxlength="5" size="5" value="<!-- TMPL_VAR NAME="b_zipcode" -->">
+				<input type="text" name="B_zipcode" maxlength="5" size="5" value="<!-- TMPL_VAR NAME="B_zipcode" -->">
 			</p>
 			<p>
-				<!-- TMPL_IF NAME="mandatoryb_city" -->
+				<!-- TMPL_IF NAME="mandatoryB_city" -->
 					<label style="font-weight:bold" >
 				<!--TMPL_ELSE-->
 					<label>
 				<!-- /TMPL_IF-->
 				City</label>
-				<input type="text" style="text-transform:uppercase;" name="b_city" size="20" value="<!-- TMPL_VAR NAME="b_city" -->">
+				<input type="text" style="text-transform:uppercase;" name="B_city" size="20" value="<!-- TMPL_VAR NAME="B_city" -->">
 			</p>
 		</fieldset>
 	</fieldset>
@@ -496,9 +496,9 @@
 	<input type="hidden" name="zipcode"  value="<!-- TMPL_VAR NAME="zipcode" -->">
 	<input type="hidden" name="city"  value="<!-- TMPL_VAR NAME="city" -->">	
 	<input type="hidden" name="branchcode"  value="<!-- TMPL_VAR NAME="branchcode" -->">
-	<input type="hidden" name="b_address"  value="<!-- TMPL_VAR NAME="b_address" -->">
-	<input type="hidden" name="b_zipcode"  value="<!-- TMPL_VAR NAME="b_zipcode" -->">
-	<input type="hidden" name="b_city"  value="<!-- TMPL_VAR NAME="b_city" -->">	
+	<input type="hidden" name="B_address"  value="<!-- TMPL_VAR NAME="B_address" -->">
+	<input type="hidden" name="B_zipcode"  value="<!-- TMPL_VAR NAME="B_zipcode" -->">
+	<input type="hidden" name="B_city"  value="<!-- TMPL_VAR NAME="B_city" -->">	
 	<input type="hidden" name="phone"   value="<!-- TMPL_VAR NAME="phone" -->" >
 	<input type="hidden" name="phonepro" value="<!-- TMPL_VAR NAME="phonepro" -->" >
 	<input type="hidden" name="mobile"  value="<!-- TMPL_VAR NAME="mobile" -->" >	
