--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryP.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryP.tmpl
@@ -76,10 +76,10 @@
 		<input type="hidden" name="emailpro" value="<!-- TMPL_VAR NAME="emailpro" -->" >
 		<input type="hidden" name="contactname"  value="<!-- TMPL_VAR NAME="contactname" -->">
 		<input type="hidden" name="relationship"  value="<!-- TMPL_VAR NAME="relationship" -->">
-		<input type="hidden" name="b_address" value="<!-- TMPL_VAR NAME="b_address" -->">
-		<input type="hidden" name="b_zipcode"  value="<!-- TMPL_VAR NAME="b_zipcode" -->">
-		<input type="hidden" name="b_city"  value="<!-- TMPL_VAR NAME="b_city" -->">
-		<input type="hidden" name="b_phone"  value="<!-- TMPL_VAR NAME="b_phone" -->"> 
+		<input type="hidden" name="B_address" value="<!-- TMPL_VAR NAME="B_address" -->">
+		<input type="hidden" name="B_zipcode"  value="<!-- TMPL_VAR NAME="B_zipcode" -->">
+		<input type="hidden" name="B_city"  value="<!-- TMPL_VAR NAME="B_city" -->">
+		<input type="hidden" name="B_phone"  value="<!-- TMPL_VAR NAME="B_phone" -->"> 
 		<input type="hidden" name="fax"  value="<!-- TMPL_VAR NAME="fax" -->"> 	
 		<textarea style="display:none;" name="contactnotes" cols="70" rows="3"  ><!-- TMPL_VAR NAME="contactnotes" --></textarea>
 
@@ -442,39 +442,39 @@
 			</select>
 		</p>
 		<p>
-			<!-- TMPL_IF NAME="mandatoryb_address" -->
+			<!-- TMPL_IF NAME="mandatoryB_address" -->
 				<label class="borrowers_mandafield">
 			<!-- TMPL_ELSE -->
 				<label>
 			<!-- /TMPL_IF-->
 			Adress </label>
-			<input type="text" name="b_address" size="40" value="<!-- TMPL_VAR NAME="b_address" -->">
+			<input type="text" name="B_address" size="40" value="<!-- TMPL_VAR NAME="B_address" -->">
 		</p>
 		<p>
-			<!-- TMPL_IF NAME="mandatoryb_zipcode" -->
+			<!-- TMPL_IF NAME="mandatoryB_zipcode" -->
 			<label class="borrowers_mandafield">
 			<!-- TMPL_ELSE -->
 			<label>
 			<!-- /TMPL_IF-->	
 			Zipcode</label>
-			<input type="text" maxlength="5" name="b_zipcode" size="5" value="<!-- TMPL_VAR NAME="b_zipcode" -->">
+			<input type="text" maxlength="5" name="B_zipcode" size="5" value="<!-- TMPL_VAR NAME="B_zipcode" -->">
 		</p>
-			<!-- TMPL_IF NAME="mandatoryb_city" -->
+			<!-- TMPL_IF NAME="mandatoryB_city" -->
 				<label class="borrowers_mandafield">
 			<!-- TMPL_ELSE -->
 				<label>
 			<!-- /TMPL_IF-->
 			City</label>
-			<input style="text-transform:uppercase;" type="text" name="b_city" size="20" value="<!-- TMPL_VAR NAME="b_city" -->">
+			<input style="text-transform:uppercase;" type="text" name="B_city" size="20" value="<!-- TMPL_VAR NAME="B_city" -->">
 		</p>
 		<p>
-			<!-- TMPL_IF NAME="mandatoryb_phone" -->
+			<!-- TMPL_IF NAME="mandatoryB_phone" -->
 				<label class="borrowers_mandafield">
 			<!-- TMPL_ELSE -->
 				<label>
 			<!-- /TMPL_IF-->
 			Phone (home)</label>
-			<input type="text" name="b_phone" size="20" value="<!-- TMPL_VAR NAME="b_phone" -->">
+			<input type="text" name="B_phone" size="20" value="<!-- TMPL_VAR NAME="B_phone" -->">
 		</p>
 		<p>
 			<!-- TMPL_IF NAME="mandatorycontactnotes" -->
@@ -540,10 +540,10 @@
 		<input type="hidden" name="emailpro" value="<!-- TMPL_VAR NAME="emailpro" -->" >
 		<input type="hidden" name="contactname"  value="<!-- TMPL_VAR NAME="contactname" -->">
 		<input type="hidden" name="relationship"  value="<!-- TMPL_VAR NAME="relationship" -->">
-		<input type="hidden" name="b_address" value="<!-- TMPL_VAR NAME="b_address" -->">
-		<input type="hidden" name="b_zipcode"  value="<!-- TMPL_VAR NAME="b_zipcode" -->">
-		<input type="hidden" name="b_city"  value="<!-- TMPL_VAR NAME="b_city" -->">
-		<input type="hidden" name="b_phone"  value="<!-- TMPL_VAR NAME="b_phone" -->"> 
+		<input type="hidden" name="B_address" value="<!-- TMPL_VAR NAME="B_address" -->">
+		<input type="hidden" name="B_zipcode"  value="<!-- TMPL_VAR NAME="B_zipcode" -->">
+		<input type="hidden" name="B_city"  value="<!-- TMPL_VAR NAME="B_city" -->">
+		<input type="hidden" name="B_phone"  value="<!-- TMPL_VAR NAME="B_phone" -->"> 
 		<input type="hidden" name="fax"  value="<!-- TMPL_VAR NAME="fax" -->"> 	
 		<textarea style="display:none;" name="contactnotes" cols="70" rows="3"  ><!-- TMPL_VAR NAME="contactnotes" --></textarea>
 	
