--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryC.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryC.tmpl
@@ -79,8 +79,8 @@
 			<input type="hidden" name="mobile" size="10" value="<!-- TMPL_VAR NAME="mobile" -->" >	
 			<input type="hidden" name="email" value="<!-- TMPL_VAR NAME="email" -->" >
 			<input type="hidden" name="emailpro" value="<!-- TMPL_VAR NAME="emailpro" -->" >
-			<input type="hidden" name="b_email" value="<!-- TMPL_VAR NAME="b_email" -->" >	
-			<input type="hidden" name="b_phone" value="<!-- TMPL_VAR NAME="b_phone" -->" >
+			<input type="hidden" name="B_email" value="<!-- TMPL_VAR NAME="B_email" -->" >	
+			<input type="hidden" name="B_phone" value="<!-- TMPL_VAR NAME="B_phone" -->" >
 			<input type="hidden" name="fax" value="<!-- TMPL_VAR NAME="fax" -->" >	
 
 			<!-- 		input from form3		 -->
@@ -244,7 +244,7 @@
 	<form name="form" action="/cgi-bin/koha/members/memberentry.pl" method="post">
 <!-- 		field always hidden in different form (1,2,3) -->
 		<input type="hidden" name="BorrowerMandatoryfield" value="<!--TMPL_VAR NAME="BorrowerMandatoryfield"-->">
-		<input type="hidden" name="FormFieldList" value="streetnumber|address|address2|zipcode|contacttitle|city|contactname|contactfirstname|branchcode|phone|phonepro|mobile|email|emailpro|b_email|b_phone">
+		<input type="hidden" name="FormFieldList" value="streetnumber|address|address2|zipcode|contacttitle|city|contactname|contactfirstname|branchcode|phone|phonepro|mobile|email|emailpro|B_email|B_phone">
 		<input type="hidden" name="category_type" value="<!-- TMPL_VAR name="category_type" -->">
 		<input type="hidden" name="type" value="borrowers">
 		<input type="hidden" name="step" value="<!-- TMPL_VAR NAME="step" -->">
@@ -469,20 +469,20 @@
 	</p>
 	<h2>Member</h2>
 	<p>	
-		<!-- TMPL_IF NAME="mandatoryb_email" -->
+		<!-- TMPL_IF NAME="mandatoryB_email" -->
 			<label  class="borrowers_mandafield">
 		<!--TMPL_ELSE-->
 			<label>
 		<!-- /TMPL_IF-->
 		E-mail (home)</label>
-		<input type="text" name="b_email" value="<!-- TMPL_VAR NAME="b_email" -->" >	
-		<!-- TMPL_IF NAME="mandatoryb_phone" -->
+		<input type="text" name="B_email" value="<!-- TMPL_VAR NAME="B_email" -->" >	
+		<!-- TMPL_IF NAME="mandatoryB_phone" -->
 			<label  class="borrowers_mandafield">
 		<!--TMPL_ELSE-->
 			<label>
 		<!-- /TMPL_IF-->
 		Phone (cell)</label>	
-		<input type="text" name="b_phone" value="<!-- TMPL_VAR NAME="b_phone" -->" >			
+		<input type="text" name="B_phone" value="<!-- TMPL_VAR NAME="B_phone" -->" >			
 	</p>
 	</fieldset>
 	<div>
@@ -538,8 +538,8 @@
 		<input type="hidden" name="mobile" size="10" value="<!-- TMPL_VAR NAME="mobile" -->" >	
 		<input type="hidden" name="email" value="<!-- TMPL_VAR NAME="email" -->" >
 		<input type="hidden" name="emailpro" value="<!-- TMPL_VAR NAME="emailpro" -->" >
-		<input type="hidden" name="b_email" value="<!-- TMPL_VAR NAME="b_email" -->" >	
-		<input type="hidden" name="b_phone" value="<!-- TMPL_VAR NAME="b_phone" -->" >
+		<input type="hidden" name="B_email" value="<!-- TMPL_VAR NAME="B_email" -->" >	
+		<input type="hidden" name="B_phone" value="<!-- TMPL_VAR NAME="B_phone" -->" >
 		<input type="hidden" name="fax" value="<!-- TMPL_VAR NAME="fax" -->" >	
 		
 		<!-- TMPL_IF NAME="opadd" -->
