Head & rel_2_2 merged

--- a/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
@@ -27,7 +27,7 @@
 			<li><a href="/cgi-bin/koha/loadmodules.pl?module=search&amp;marc=1&amp;type=intranet">Advanced Search</a></li>
 			<li><a href="/cgi-bin/koha/bookshelves/shelves.pl">Virtual Shelves</a></li>
 		</ul>
-	</li>	
+	</li>
 	<li>Cataloging
 <ul>
 			<li><a href="/cgi-bin/koha/cataloguing/addbooks.pl">Cataloging</a></li>
@@ -36,7 +36,7 @@
 <li>Acquisitions<ul>
 <li><a href="/cgi-bin/koha/loadmodules.pl?module=acquisitions">Acquisitions</a></li><li><a href="/cgi-bin/koha/admin/aqbookfund.pl">Book funds</a></li>
 <li><a href="/cgi-bin/koha/acqui/histsearch.pl">Search Order History</a></li>
-<li><a href="/cgi-bin/koha/import/breeding.pl">Import to reservoir</a></li><li><a href="/cgi-bin/koha/bull-home.pl">Serials</a></li></ul>
+<li><a href="/cgi-bin/koha/import/breeding.pl">Import to reservoir</a></li><li><a href="/cgi-bin/koha/serials/serials-home.pl">Serials</a></li></ul>
 	</li>
 	<li><a href="/cgi-bin/koha/authorities/authorities-home.pl">Authorities</a></li>
 	<li>Accounts and Reports
@@ -72,7 +72,7 @@
 	</li>
 	<li>Koha Administration
 		<ul>
-		<li><a href="/cgi-bin/koha/tools/tools-home.pl">Tools</a></li>
+		<li><a href="/cgi-bin/koha/admin/admin-home.pl">Tools</a></li>
 		<li><a href="/cgi-bin/koha/admin/admin-home.pl">System Administration Home</a></li>
 		<li><a href="/cgi-bin/koha/admin/systempreferences.pl">System Preferences</a></li>
 		<li><a href="/cgi-bin/koha/barcodes/barcodes.pl">Barcodes generator</a></li>
@@ -87,7 +87,7 @@
 				<th>
 					<!-- TMPL_VAR NAME="title" --></th>
 					<td>
-					<!-- TMPL_VAR NAME="new" --> 
+					<!-- TMPL_VAR NAME="new" -->
 					</td>
 				<td>
 						<!-- TMPL_VAR NAME="newdate" --> 
