--- a/koha-tmpl/intranet-tmpl/prog/en/serials/serials-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/serials-home.tmpl
@@ -1,7 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Serials <!-- TMPL_VAR name="biblionumber" --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-serials.inc" -->
 
 <h1>Serials</h1>
 <div id="serials_home">
@@ -27,7 +27,7 @@
 				&nbsp;
 			</td>
 			<td colspan=2>
-				<input type="submit" value="filter" class="button bull" title="set a filter on ISSN / title">
+				<input type="submit" value="filter" class="button serial" title="set a filter on ISSN / title">
 			</td>
 		</tr>
 		<!-- TMPL_LOOP name="subscriptions" -->
@@ -38,7 +38,7 @@
 					<td>
 				<!-- /TMPL_IF -->
 					<!-- TMPL_IF name="ISSN" -->
-						<a href="serial-issues.pl?biblionumber=<!-- TMPL_VAR name="biblionumber" -->" class="button bull" title="Issues history"><!-- TMPL_VAR name="ISSN" --></a>
+						<a href="serial-issues.pl?biblionumber=<!-- TMPL_VAR name="biblionumber" -->" class="button serial" title="Issues history"><!-- TMPL_VAR name="ISSN" --></a>
 					<!-- /TMPL_IF -->
 					
 				</td>
@@ -65,19 +65,19 @@
 				<!-- TMPL_ELSE -->
 					<td>
 				<!-- /TMPL_IF -->
-					<a href="subscription-detail.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button bull" title="subscription detail">Detail</a>
+					<a href="subscription-detail.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button serial" title="subscription detail">Detail</a>
 				</td>
 				<!-- TMPL_IF name="toggle" -->
 					<td class="hilighted">
 				<!-- TMPL_ELSE -->
 					<td>
 				<!-- /TMPL_IF -->
-					<a href="statecollection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button bull" title="receive issues for this subscription">Receive</a>
+					<a href="statecollection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button serial" title="receive issues for this subscription">Receive</a>
 				</td>
 			</tr>
 		<!-- /TMPL_LOOP -->
 	</table>
-	<a href="/cgi-bin/koha/serials/subscription-add.pl" class="button bull">Add subscription</a>
+	<a href="/cgi-bin/koha/serials/subscription-add.pl" class="button serial">Add subscription</a>
 </div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
 
