serial menu added

--- a/koha-tmpl/intranet-tmpl/prog/en/serials/distributedto.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/distributedto.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Subscription edit -- Select supplier<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-
+<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
 <div id="mainbloc">
 	<h1>Select borrowers or enter manually the names</h1>
 	<p>
