--- a/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-add.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-add.tmpl
@@ -1,7 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Subscription edit<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-serials.inc" -->
 
 <!--------------------------MAIN BODY OF PAGE-------------------------->
 <!-- TMPL_IF name="mod" -->
