--- a/koha-tmpl/intranet-tmpl/prog/en/serials/acqui-search-result.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/acqui-search-result.tmpl
@@ -1,4 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Subscription edit -- Select supplier<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-serials.inc" -->
 <h1>Supplier Search Results</h1>
 <h2>You searched on <b>supplier <!-- TMPL_VAR name="supplier" -->,</b> <!-- TMPL_VAR name="count" --> results found</h2>
 <table>
