--- a/koha-tmpl/intranet-tmpl/prog/en/serials/serial-issues.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/serial-issues.tmpl
@@ -1,7 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Subscription edit<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
+<!--TMPL_INCLUDE NAME="menu-serials.inc" -->
 
 <h1>Issues for a subscription</h1>
 <!-- TMPL_LOOP name="subscription_LOOP" -->
@@ -75,19 +75,19 @@
 	<!--TMPL_UNLESS Name=fullinfo -->
 		<p><!-- TMPL_VAR name="notes" --></p>
 		<!-- TMPL_IF name="opacnote" -->
-			<h3 class="bull">Issues summary</h2>
+			<h3 class="serial">Issues summary</h2>
 			<p>
 				<!-- TMPL_VAR name="opacnote" -->
 			</p>
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF name="recievedlist" -->
-			<h3 class="bull">Recieved issues</h2>
+			<h3 class="serial">Recieved issues</h2>
 			<p>
 				<!-- TMPL_VAR name="recievedlist" -->
 			</p>
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF name="missinglist" -->
-			<h3 class="bull">Missing issues</h2>
+			<h3 class="serial">Missing issues</h2>
 			<p>
 				<!-- TMPL_VAR name="missinglist" -->
 			</p>
@@ -97,7 +97,7 @@
 <!-- /TMPL_LOOP -->
 </div>
 <div id="action">
-	<form action="/cgi-bin/koha/bull-home.pl">
+	<form action="/cgi-bin/koha/serials-home.pl">
 		<input type="hidden" name="biblionumber" value="<!-- TMPL_VAR name="biblionumber" -->" />
 		<input type="submit" value="Subscriptions" />
 	</form>
