--- a/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-detail.tmpl
@@ -1,7 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Subscription detail<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-serials.inc" -->
 
 <h1>Subscription for <!-- TMPL_VAR name="bibliotitle" --></h1>
 <div id="serials_subscription_detail">
@@ -198,7 +198,7 @@
 		<input type="hidden" name="biblionumber" value="<!-- TMPL_VAR name="biblionumber" -->" />
 		<input type="submit" value="Issue history" />
 	</form>
-	<form action="/cgi-bin/koha/bull-home.pl">
+	<form action="/cgi-bin/koha/serials-home.pl">
 		<input type="hidden" name="biblionumber" value="<!-- TMPL_VAR name="biblionumber" -->" />
 		<input type="submit" value="Subscriptions" />
 	</form>
