--- a/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-detail.tmpl
@@ -190,7 +190,7 @@
 		<input type="hidden" name="op" value="mod" />
 		<input type="submit" value="Modify subscription" />
 	</form>
-	<form action="statecollection.pl">
+	<form action="serials-recieve.pl">
 		<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->" />
 		<input type="submit" value="Recieve issues" />
 	</form>
@@ -198,7 +198,7 @@
 		<input type="hidden" name="biblionumber" value="<!-- TMPL_VAR name="biblionumber" -->" />
 		<input type="submit" value="Issue history" />
 	</form>
-	<form action="/cgi-bin/koha/serials-home.pl">
+	<form action="/cgi-bin/koha/serials/serials-home.pl">
 		<input type="hidden" name="biblionumber" value="<!-- TMPL_VAR name="biblionumber" -->" />
 		<input type="submit" value="Subscriptions" />
 	</form>
