statecollection.pl renamed to serials-recieve.pl

--- a/koha-tmpl/intranet-tmpl/prog/en/serials/lateissues.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/lateissues.tmpl
@@ -28,7 +28,7 @@
 				<td class="hilighted"><!-- TMPL_VAR name="planneddate" --></td>
 				<td class="hilighted">
 					<a href="subscription-detail.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Detail</a>
-					<a href="statecollection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Recieve</a>
+					<a href="serials-recieve.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Recieve</a>
 				</td>
 			<!-- TMPL_ELSE -->
 				<td><!-- TMPL_VAR name="Title" --></td>
@@ -36,7 +36,7 @@
 				<td><!-- TMPL_VAR name="planneddate" --></td>
 				<td>
 					<a href="subscription-detail.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Detail</a>
-					<a href="statecollection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Recieve</a>
+					<a href="serials-recieve.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->">Recieve</a>
 				</td>
 			<!-- /TMPL_IF -->
 		</tr>
