--- a/koha-tmpl/intranet-tmpl/prog/en/serials/serials-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/serials-home.tmpl
@@ -72,7 +72,7 @@
 				<!-- TMPL_ELSE -->
 					<td>
 				<!-- /TMPL_IF -->
-					<a href="statecollection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button serial" title="receive issues for this subscription">Receive</a>
+					<a href="serials-recieve.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button serial" title="receive issues for this subscription">Receive</a>
 				</td>
 			</tr>
 		<!-- /TMPL_LOOP -->
