--- a/koha-tmpl/intranet-tmpl/prog/en/serials/statecollection.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/statecollection.tmpl
@@ -11,7 +11,7 @@
 
 <div id="bloc25">
 <h2 class="serial">waited or late numbers</h2>
-	<form method="post" name="f" action="statecollection.pl">
+	<form method="post" name="f" action="serials-recieve.pl">
 		<input type="hidden" name="op" value="modserialstatus">
 		<input type="hidden" name="serial" value="<!-- TMPL_VAR name="serial" -->">
 		<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->">
@@ -108,7 +108,7 @@
 
 <div id="bloc25">
 	<h2 class="serial">Subscription summary</h2>
-	<form method="post" name="f" action="statecollection.pl">
+	<form method="post" name="f" action="serials-recieve.pl">
 		<input type="hidden" name="op" value="modsubscriptionhistory">
 		<input type="hidden" name="serial" value="<!-- TMPL_VAR name="serial" -->">
 		<input type="hidden" name="subscriptionid" value="<!-- TMPL_VAR name="subscriptionid" -->">
