--- a/koha-tmpl/intranet-tmpl/prog/en/serials/receipt-search-result.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/receipt-search-result.tmpl
@@ -39,7 +39,7 @@
 							<img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR name="theme" -->/images/fileopen.png"  width="32" hspace="0" vspace="0" border="0" alt="Authority number <!-- TMPL_VAR name="authid" -->" title="Serial number<!-- TMPL_VAR name="subscriptionid" -->">
 						</a> </div>
 					</td>
-	<td><div align="center"><a href="statecollection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&serial=<!-- TMPL_VAR name="serial" -->"> 
+	<td><div align="center"><a href="serials-recieve.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->&serial=<!-- TMPL_VAR name="serial" -->">
 
 							<img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR name="theme" -->/images/Fleche.jpg"  width="32" hspace="0" vspace="0" border="0" alt="Subscribtion serial<!-- TMPL_VAR name="subscriptionid" -->" title="Serial number<!-- TMPL_VAR name="subscriptionid" -->">
 
